# Nexus_ray

./: .coverage  .dockerignore  .gitignore  Dockerfile  EVALUATION_REPORT.md  README.md  benchmark_results.json  bge_reranker_benchmark_results.csv  docker-compose.yml  pyproject.toml  requirements.txt  verify_semiconductor.py
assets/screenshots/: README.md
docs/: DESIGN.md  PERFORMANCE_REPORT.md  REFERENCE_AGENTS.md  SDK_API.md  ULTIMATE_BENCHMARK.md  agent_flow_visualization.md  benchmarking.md  dag_flows.md  implementation_plan.md  quickstart_benchmarking.md  walkthrough.md
examples/: complete_integration.py  demo_collaboration.py  demo_guardrails.py  demo_llm_working.py  llm_demo.py  notion_workflow.py  quick_test_agents.py  run_reference_agents.py  test_agents_with_llm.py  vector_memory_demo.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
scripts/: benchmark_models.py  check_hallucinations.py  debug_hf.py  debug_imports.py  download_binchecks.py  download_direct.ps1  download_enhanced.ps1  download_models.bat  download_models.py  recover_from_cache.py  stress_test_industrial.py  verify_downloads.py
src/: __init__.py
src/agents/: __init__.py  protein_drug_discovery.py  semiconductor_yield.py
src/api/: models.py  server.py  websockets.py
src/collaboration/: __init__.py  agent_registry.py  coordinator.py  message_protocol.py
src/core/: __init__.py  config.py  dag.py  exceptions.py  executor.py  metrics_store.py  orchestrator.py  orchestrator_enhanced.py  state_manager.py  task.py
src/guardrails/: __init__.py  content_filter.py  safety_scorer.py  validators.py
src/llm/: __init__.py  openvino_llm.py  parser.py  prompts.py
src/memory/: __init__.py  chromadb_backend.py  embedder.py  faiss_backend.py  reranker.py  vector_memory.py
src/messaging/: __init__.py  kafka_client.py  message_router.py  subscriptions.py
src/observability/: __init__.py  activity_feed.py  llm_insights.py  metrics.py  notion_sync.py
src/sdk/: __init__.py  policies.py  tools.py  workflow_builder.py
tests/: test_api.sh  test_api_endpoints.py
tests/e2e/: test_complete_workflows.py
tests/integration/: test_workflow_integration.py
tests/unit/: test_core_framework.py  test_guardrails.py  test_llm.py  test_memory.py  (+2 more)
tools/: dashboard_tui.py  monitor.py  verify_observability.py
(+20 files in other folders)
