[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-ray"
version = "1.0.0"
description = "Enterprise-grade AI Agent Framework with Intel OpenVINO optimization"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Nexus Ray Team"}
]
keywords = ["ai", "agents", "workflow", "orchestration", "openvino", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.5.0",
    "networkx>=3.2",
    "kafka-python-ng>=2.2.0",
    "fastapi>=0.108.0",
    "textual>=0.47.0",
    "optimum[openvino]>=1.16.0",
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.18",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
]
chemistry = [
    "rdkit>=2023.9.1",
    "biopython>=1.83",
]
vision = [
    "opencv-python>=4.8.1",
    "pillow>=10.1.0",
]

[project.urls]
Homepage = "https://github.com/nexus-ray/framework"
Documentation = "https://nexus-ray.readthedocs.io"
Repository = "https://github.com/nexus-ray/framework"

[project.scripts]
nexus-ray = "nexus_ray.cli:main"
nexus-tui = "nexus_ray.ui.tui.command_center:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --cov=src --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance benchmarks",
]
